# climatifaiAPI

./: .env.example  .gitignore  DATABASE.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  railway.toml
alembic/: env.py  script.py.mako
alembic/versions/: 001_initial_schema.py  002_locations_and_raw_payload_fk.py
cli/: ingest.py  ingest_docs.py  ingest_fao_nasa.py
data/: crop_requirements.json
data/catalogs/geonames/: README.md  manifest.json
db/: __init__.py  config.py  models.py  session.py
docs/: locations.md
gql/: schema.py
routers/: agri.py  deps.py  fires.py  support.py
scripts/: build_locations_from_geonames.py  list_db_tables.py  load_locations_csv.py  qa_climate_coverage.sql  supabase_db.py
services/: embedder.py  firms.py  ingest_openmeteo.py  locations_catalog.py  locations_runtime.py  openmeteo.py  query_keys.py  read_through_agri.py  read_through_firms.py  read_through_storage.py  scoring.py  soilgrids.py  tomorrow.py  vector_store.py
supabase/: config.toml  seed.sql
