[project]
name = "climatifai-api"
version = "0.1.0"
description = "Climatifai / AgroRisk — agricultural risk intelligence API"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115",
    "uvicorn>=0.30",
    "httpx>=0.28",
    "polars>=1.0",
    "python-dotenv>=1.0",
    "sqlalchemy[asyncio]>=2.0.40",
    "asyncpg>=0.29",
    "alembic>=1.14",
    "psycopg[binary]>=3.2",
    "qdrant-client>=1.12",
    "strawberry-graphql[fastapi]>=0.250",
]


[project.scripts]
climatifai-ingest = "cli.ingest:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["."]
include = ["db*", "services*", "routers*", "cli*", "gql*"]
